[project]
name = "lynxsec"
version = "0.2.0"
description = "LynxSec - 专精白帽安全的AI智能体，会用工具的AI"
authors = [{name = "BFyffcb"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pydantic>=2",
    "rich>=13",
]

[project.scripts]
lynxsec = "cli:main"


[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "infra*"]
exclude = ["wiki*", "state*", "outputs*"]
